--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="prescription">PRESCRIPTION</string>
     <string name="create_page">Create Page</string>
     <string name="medical_records">medical records</string>
+    <string name="newdoc">new_documents</string>
 </resources>
