--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,15 @@
     <string name="create_page">Create Page</string>
     <string name="medical_records">medical records</string>
     <string name="newdoc">new_documents</string>
+    <string name="register">Register</string>
+    <string name="re_type_password">Re-type Password</string>
+    <string name="e_mail">User_Name</string>
+    <string name="your_name">Full Name</string>
+    <string name="swipe_right_for_login">Swipe Right for Login</string>
+    <string name="password">password</string>
+    <string name="tag">Thank you and welcome \nTo a digital notepad for medics</string>
+    <string name="login">login</string>
+    <string name="swipe_left_for_register">swipe left to register  </string>
+    <string name="Use_Fingerprint">Use FingerPrint Instead</string>
+    <string name="medical_notepad">medical_Notepad</string>
 </resources>
